# purejq

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  people.json
src/purejq/: __init__.py  builtins.py  cli.py  compiler.py  encoder.py  errors.py  lexer.py  ops.py  parser.py  prelude.py
tests/: jqtest.py  test_cli.py  test_conformance.py  test_package.py  test_robustness.py
tests/conformance/: expected_failures.txt
tools/: bench.py  update_expected_failures.py
